kubernetes/mdhs-prototype/mdhs-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mdhs-deployment
  labels:
    name: mdhs
    tier: frontend
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: mdhs
        tier: frontend
    spec:
      containers:
      - image: portlandwebworks/mdhs-poc:latest
        name: webapp
        ports:
        - containerPort: 8080
