kubernetes/mdhs-prototype/mdhs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mdhs-internal
  labels:
    name: mdhs
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    name: mdhs
    tier: frontend
