kubernetes/mdhs-prototype/mdhs-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mdhs-ingress
spec:
  backend:
    serviceName: mdhs-internal
    servicePort: 8080
